fixed overflowing text in loot results

--- a/src/components/organisms/ResultsTable/ResultsTable.scss
+++ b/src/components/organisms/ResultsTable/ResultsTable.scss
@@ -19,6 +19,10 @@
 .results-table-content {
   height: 100%;
   width: 100%;
+  .item-description {
+    max-height: 60px;
+    overflow: hidden;
+  }
 }
 
 .selectable-item {
